GNOME Bugzilla – Bug 592945
Images not automatically rotated
Last modified: 2010-12-08 03:51:42 UTC
In recent versions of eog (Ubuntu Jaunty's packaged version, or built-in-jhbuild), I find that eog does not automatically rotate my images when viewing a folder of images, as I navigate previous/next, though the thumbnails _are_ rotated. These are .JPG files from a Canon EOS 20D camera. Unsetting/Setting the Automatic Orientation option makes no difference. The Reload Image plugin makes no difference either. Strangely, the image _is_ rotated if: - It was the image that I opened eog on, for instance by right-clicking in Nautilus. - It was previously shown via the slideshow feature. This is a very time-consuming workaround.
I guess you are clicking the image in the collection, as that's the only way for me to reproduce it. Using the toolbar buttons or the keyboard rotates the image as expected here.
Okay, git master should be fixed now. I have to say that's a really nice catch, thanks for the report. There were actually two problems, but fixing one would already fix/workaround the whole problem. The first was a broken check if Exif data should be loaded besides image dimensions that would fail if the image data wasn't requested. And the second was that eog tried to autorotate the image although the metadata wasn't available. As autorotation is only done once per image the tooltip query for the collection could prevent it entirely. commit 881fa5a4ad4f9ecd7a6d0f5415f063086813a614 Author: Felix Riemann <> Date: Tue Aug 25 20:00:21 2009 +0200 Don't try to autorotate before the metadata was loaded Autorotation would fail in that case. As it is only performed once for each image a simple image dimension query could prevent autorotation entirely for an image. Fixes bgo#592945. Closes: http://bugzilla.gnome.org/show_bug.cgi?id=592945 commit 3c501d254c968bcd955194a6881c7b5bb8868c34 Author: Felix Riemann <> Date: Tue Aug 25 19:56:17 2009 +0200 Fix check if only the image dimensions need to be loaded The check was assuming that if there's more requested than only image dimensions. This breaks with the image collection tooltips which don't request image data but Exif data in addition to the dimensions.
> I guess you are clicking the image in the collection, as that's the only way > for me to reproduce it. Using the toolbar buttons or the keyboard rotates the > image as expected here. Yes, that's what happens with the Ubuntu (Jaunty) package. Thanks for the very quick response and fix. However, in my jhbuild shell, I find that the rotation never ever happens in eog even when using the keyboard or toolbar buttons. The autorotate preference is checked. I guess this could be a different bug with the same symptoms.
Created attachment 141830 [details] [review] add some debug output (In reply to comment #3) > Thanks for the very quick response and fix. However, in my jhbuild shell, I > find that the rotation never ever happens in eog even when using the keyboard > or toolbar buttons. The autorotate preference is checked. I guess this could be > a different bug with the same symptoms. Odd. Latest git works fine here (not tried in jhbuild though). Please apply this patch and run eog with the EOG_DEBUG_IMAGE_LOAD envvar set and post its output. And some questions: :) Do you have any plugins enabled? Can you attach one of your pictures?
Murray, can you test patch #141830 and report back? TIA!
Closing this bug report as no further information has been provided. Please feel free to reopen this bug if you can provide the information asked for. Thanks!