Don't try to autorotate before the metadata was loaded

Autorotation would fail in that case. As it is only performed once for
each image a simple image dimension query could prevent autorotation
entirely for an image. Fixes bgo#592945.

Closes: http://bugzilla.gnome.org/show_bug.cgi?id=592945